rpi5/teslamate/grafana/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: teslaboard
  labels:
    app: teslaboard
spec:
  replicas: 1
  serviceName: teslaboard
  selector:
    matchLabels:
      app: teslaboard
  template:
    metadata:
      name: teslaboard
      labels:
        app: teslaboard
    spec:
      containers:
        - name: teslaboard
          image: teslamate/grafana:1.32.0@sha256:76b8d0599b552e517df406805183b4ef578bc74cee8bcd147ab8698057d63629
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              protocol: TCP
              name: http
          volumeMounts:
            - mountPath: /var/lib/grafana
              name: data
      restartPolicy: Always
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 5Gi
