rpi5/teslamate/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teslaboard
  namespace: teslamate
spec:
  selector:
    app: teslaboard
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
