rpi5/teslamate/grafana/ingress-public.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: teslaboard-public
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`teslaboard.anshulg.direct`)
      services:
        - name: teslaboard
          port: 80
  tls:
    secretName: teslaboard-public-cert-tls
    domains:
      - main: teslaboard.anshulg.direct
